--- a/index.html
+++ b/index.html
@@ -17,3 +17,44 @@
 <script type="text/javascript" src="app.js"></script>
  </body>
  </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+// console.log();
+// var submitButton = document.getElementById("submit");
+
+// submitButton.addEventListener('click', function(evt){
+//     alert("Fuck this!");
+
+
+// })
+
+// var userTree = {};
+// userTree.character = '';
+// userTree.height = ''
+
+// var character = document.getElementById("character");
+// userTree.character = character.value;
+// console.log(userTree.character);
+
+// character.addEventListener('', function(evt) {
+//     // console.log("big steps kitten");
+
+// // for (var i = 0; i < 9; i++) {
+// //     userTree.character += i;
+// // } -->
+
